fixes scrollbar heights

--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ rux-container::part(container) {
 
 rux-container::part(body) {
   padding: 0;
-  overflow-y: auto;
+  background-color: var(--color-palette-darkblue-900)
 }
 
 rux-table-header {
@@ -45,10 +45,16 @@ rux-table-header {
   grid-area: alerts;
 }
 
-.alerts::part(body) {
-  padding-bottom: 0px;
-  overflow-y: auto;
-  height: 86%;
+.alerts-footer {
+  display: flex;
+  justify-content: center;
+  border-top: 1px solid var(--logHeaderBackgroundColor, rgb(20, 32, 44));
+  box-shadow: 0 -0.5rem 1.25rem rgba(0, 0, 0, 0.25);
+  height: 3rem;
+  padding: 2rem;
+  position: sticky;
+  bottom: 0;
+  background-color: #1B2D3E;
 }
 
 rux-accordion rux-table-row {
@@ -60,10 +66,24 @@ rux-accordion rux-table-row {
   height: 100%;
 }
 
-.constellation::part(body) {
-  padding-bottom: 0px;
+.table-wrapper {
   overflow-y: scroll;
-  height: 84%;
+}
+
+.alerts .table-wrapper {
+  height: 540px;
+}
+
+.constellation .table-wrapper {
+  height: 348px;
+}
+
+.watcher .table-wrapper {
+  height: 235px;
+}
+
+.table-wrapper::-webkit-scrollbar-track {
+  margin-top: 40px;
 }
 
 rux-timeline::part(time-region-container) {
